# PREDICTING-WINE-VARIETY-BY-CHEMICAL-ANALYSIS

./: README.md  main.ipynb  main.py  pyproject.toml
